# TozinTech_Scale

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  FarsiType.cpp  Kconfig.projbuild  main.cpp  main.h  systeminfo.cpp  systeminfo.h
main/core/: constant.h  definations.h  global_constants.h  global_variables.h  hardware_io.h  initializa.cpp
main/core/calibration/ui/: calibration_page.cpp  calibration_page.h
main/core/calibration/usecase/: calibration.cpp  calibration.h
main/core/constants/: constant.h
main/core/data_types/: plu.cpp  report.cpp  transmition.cpp
main/core/data_types/plu/: plu.cpp  plu.h
main/core/device_driver/: seven_segment_display.cpp  seven_segment_display.h
main/core/device_driver/adc_ads1232/: MedianFilter.cpp  MedianFilter.h  adc.cpp  adc.h  fir_filter.cpp  fir_filter.h
main/core/device_driver/chip_adc/: chip_adc.cpp  chip_adc.h
main/core/device_driver/commiunication_uart/: comm_uart.cpp  comm_uart.h
main/core/device_driver/gpio/: gpio.cpp  gpio.h
main/core/device_driver/matrix_keyboard/: keyboard.cpp  keyboard.h
main/core/device_driver/nvs/: nvs.cpp  nvs.h
main/core/device_driver/printer_uart/: printer_uart.cpp  printer_uart.h
main/core/device_driver/rtc/: rtc.cpp  rtc.h
main/core/device_driver/seven_segment_display/: seven_segment_display.cpp  seven_segment_display.h
main/core/device_driver/sntp/: sntp.cpp  sntp.h
main/core/device_driver/storage/: storage.cpp  storage.h
main/core/device_driver/timer/: timer.cpp  timer.h
main/core/device_driver/weight/: weight.cpp  weight.h
main/core/device_driver/wifi/: wifi.cpp  wifi.h
main/core/entities/: barcode.h  baseCommiunicationEntity.h  calibration.h  clerk.h  commiunication.h  customer.h  plu.h  report.h  store.h  tax.h  weight.h
main/core/include/: barcode.h  baseCommiunicationEntity.h  calibration.h  clerk.h  commiunication.h  customer.h  plu.h  report.h  store.h  tax.h  weight.h
main/core/weight/: weight.cpp  weight.h
main/features/calibration/: calibration.cpp  calibration.h
main/features/calibration/ui/: calibration_page.cpp  calibration_page.h
main/features/calibration/usecase/: calibration.cpp  calibration.h
main/features/sale/ui/: sale_page.cpp  sale_page.h
main/features/splash/ui/: splash.cpp  splash.h
main/features/weight/: weight.cpp  weight.h
main/features/weight/calibration/: calibration.cpp  calibration.h
